@@ -12,6 +12,9 @@ PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-
   - It automatically associates the tree-sitter based *go-ts-mode* with GO
     files when *pel-use-go* customizable user-option is set to the new value
     =with-tree-sitter=. If it is set to =t= it select the classic *go-mode*.
+  - Also simplified the customization: the *pel-use-go-mode* user option is no
+    longer used: setting *pel-use-go* is enough to request its installation.
+    It is installed even if Go support done by Tree Sitter is requested.
 - Improve PEL lazy loading macros:
   - *pel-eval-after-load* macro now accepts a list of features or just one.
     It is mostly useful
